2009-01-01  Mirco Bauer <meebey@meebey.net> 

	* Session.cs: nicer message

2009-01-01  Mirco Bauer <meebey@meebey.net> 

	* FrontendManager.cs: Don't prevent removing chats when they are not synced
	  yet, as that causes a race condition when someone enters and leaves
	  right-away a chat and thus is not being on the frontend side. Also
	  problematic servers (like psyBNC) could cause such "enter chat, no sync,
	  can't remove chat" situation. (closes trac bug #144)

2008-12-31  Mirco Bauer <meebey@meebey.net> 

	* Session.cs: Added Connect() method that allows frontends to create new
	  connections in a protocol neutral way.

2008-12-28  Mirco Bauer <meebey@meebey.net> 

	* Config/Config.cs: Make sure Username and Password are initialized empty,
	  as there can't be default values in the config for those.

2008-12-28  Mirco Bauer <meebey@meebey.net> 

	* Makefile.am: Replaced hardcoded gmcs calls with configure variable.

2008-12-28  Mirco Bauer <meebey@meebey.net> 

	* Chats/ChatModel.cs: Implemented remembering last seen highlight in chats,
	  so frontends will not re-highlight when re-attaching. (closes trac
	  ticket #97)

2008-12-26  Mirco Bauer <meebey@meebey.net> 

	

2008-12-26  Mirco Bauer <meebey@meebey.net> 

	* Session.cs: Added GetUri() method.
	
	  Moved smuxi welcome message code to RegisterFrontendUI().
	
	  Added IsLocal property.
	* FrontendManager.cs: Fixed TaskQueue usage, AbortedEvent was not used.
	
	  Use Finalizer/Dispose pattern to shut-down TaskQueue.
	
	  Removed some unneeded casts.
	
	  Refactored some if () blocks to if (!) return.

2008-12-22  Mirco Bauer <meebey@meebey.net> 

	* Messages/MessageType.cs: Ups forgot to commit this one.

2008-12-22  Mirco Bauer <meebey@meebey.net> 

	* Config/Config.cs, Config/NotificationAreaIconMode.cs, Engine.mdp: Made
	  notification area icon configurable, supporting: never, always, minimize
	  to tray, close to tray. (closes trac ticket #137)

2008-12-19  Mirco Bauer <meebey@meebey.net> 
