@@ -1,5 +1,9 @@
 2009-01-01  Mirco Bauer <meebey@meebey.net> 
 
+	* Session.cs: use variable in translatable strings
+
+2009-01-01  Mirco Bauer <meebey@meebey.net> 
+
 	* Session.cs: nicer message
 
 2009-01-01  Mirco Bauer <meebey@meebey.net> 
